Premium: # 🚀 SinceDungeon Premium Addon - Optimization & Compatibility Update
### ✨ Fixes & Modernization
* **Paper 1.21.4+ Compatibility**: Replaced the deprecated `PotionEffectType.getByName` and `Registry.POTION_EFFECT_TYPE` with the modern `Registry.MOB_EFFECT` API to prevent server startup warnings and future breakage.
* **Component API Migration**: Resolved the deprecated `Item.setCustomName(String)` warning in holographic drops. The system now securely uses Adventure `Component` parsing via `customName(Component)` for perfect hex-color support.
* **Java 20+ URL Fix**: Replaced the deprecated `URL(String)` constructor in the Discord Webhook system with the modern, secure `URI.create(String).toURL()` standard.

### 🛠 Improvements
* **Zero Hardcoding**: Extracted all hardcoded sounds, particles, and Hologram texts (Leaderboard headers, formats) from the Java classes directly into `config.yml` and `messages.yml`.
* **Enhanced Performance**: Optimized the reflection calls and asynchronous database polling in the Hologram and Roulette managers for a much smoother tick rate.
* **Clean Code**: Standardized all class imports and implemented comprehensive, professional English Javadocs across the entire premium module.